# hymission

./: AGENTS.md  CMakeLists.txt  README.md  meson.build
devlog/: 2026-03-08-strip-bar-handoff-and-crop-fix.md  2026-03-09-multi-workspace-recent-first-sorting.md
docs/: architecture.md  spec.md  todo.md
src/: main.cpp  mission_layout.cpp  mission_layout.hpp  overview_controller.cpp  overview_controller.hpp  overview_logic.cpp  overview_logic.hpp
tools/: layout_demo.cpp  mission_layout_test.cpp  overview_logic_test.cpp
